src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --grainy: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 500'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch' /%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)' /%3E%3C/svg%3E");
}

@layer base {
  html {
    @apply scroll-smooth;
  }
}

@layer utilities {
  .glow {
    @apply transition-all bg-gradient-to-t from-violet-500/30 to-transparent duration-500 [background-position:bottom_left] [background-size:100%_0] bg-no-repeat hover:[background-size:100%_100%];
  }

  .not-glow {
    @apply !bg-none;
  }
}

@layer components {
  .meh-grid {
    @apply grid lg:gap-5 xl:gap-10;

    grid-template-areas:
      'header'
      'main'
      'footer';
    grid-template-columns: minmax(0, auto);

    @media (min-width: 1024px) {
      grid-template-areas:
        'header .      .'
        'nav    main   main'
        'aside  main   main'
        '.      footer .';
      grid-template-columns: 1fr 682px 1fr;
      grid-template-rows: minmax(0, auto) minmax(0, auto) 1fr minmax(0, auto);
    }
  }

  .meh-header {
    @apply w-[682px] max-w-full min-h-[160px] mx-auto lg:min-h-0 lg:max-w-none lg:w-full lg:mx-0;
    grid-area: header;
  }

  .meh-fulltop {
    grid-area: header;

    @media (min-width: 1024px) {
      grid-area: 1 / 1 / 2 / 4;
    }
  }

  .meh-nav {
    @apply w-[682px] max-w-full mx-auto lg:max-w-none lg:w-full lg:mx-0 lg:min-w-[200px];
    grid-area: header;

    @media (min-width: 1024px) {
      grid-area: nav;
    }
  }

  .meh-aside {
    @apply hidden lg:flex justify-end items-start pl-2;
    grid-area: aside;
    position: relative;
  }

  .meh-footer {
    @apply pb-4 pt-20 pr-4 lg:pr-0;
    grid-area: footer;
  }

  .meh-main {
    @apply w-[682px] max-w-full mx-auto lg:max-w-none lg:w-full lg:mx-0;
    grid-area: main;
  }
}

.footnotes {
  position: absolute;
  top: 0;
  height: calc(100% + 140px);
  left: calc(100% + 16px);
  overflow: hidden;
  width: 200px;

  display: none;

  @media (min-width: 1111px) {
    display: block;
  }

  h2,
  h3 {
    display: none;
  }

  > ol {
    list-style-type: none;
    margin: 0;
    padding: 0;
  }

  li p {
    margin-top: 4px;
    margin-bottom: 4px;
  }
}

